# DEEPSEEK-QuickStart

./: .gitignore  main.py  pyproject.toml
deepseek/api/: deepseek_api.ipynb  gomoku.html  rag_milvus_deepseek.ipynb
